--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "strapi-plugin-pfapi",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Pfapi plugin uses strapi-pfapi to achieve pretty fast - single digit milliseconds on average api processing time.",
   "strapi": {
     "name": "pfapi",
     "description": "Pfapi plugin uses local and redis caches to achieve pretty fast - single digit milliseconds on average api processing time.",
     "kind": "plugin",
-    "displayName": "Pfapi"
+    "displayName": "Pretty Fast API"
   },
   "author": {
     "name": "Sam Wen"
@@ -22,6 +22,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "strapi-pfapi": "^1.1.6"
+    "strapi-pfapi": "^1.1.8"
   }
 }
