--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi-plugin-pfapi",
-  "version": "1.9.3",
+  "version": "1.9.5",
   "description": "Pfapi plugin provides configurable and fast API services.",
   "strapi": {
     "name": "pfapi",
@@ -39,7 +39,8 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "fs-extra": "^10.1.0",
-    "strapi-pfapi": "^1.9.2"
+    "lru-cache": "^7.12.0",
+    "strapi-pfapi": "^1.9.5"
   },
   "engines": {
     "node": ">=14.19.1 <=16.x.x",
