--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi-plugin-pfapi",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "Pfapi plugin provides configurable, secure and fast API services.",
   "strapi": {
     "name": "pfapi",
@@ -26,7 +26,15 @@
     "milliseconds",
     "api",
     "processing",
-    "response",
+    "time",
+    "ip",
+    "block",
+    "allow",
+    "rate",
+    "limit",
+    "throttle",
+    "activity",
+    "log",
     "time",
     "ejs",
     "template"
@@ -40,7 +48,7 @@
     "ejs": "^3.1.8",
     "fs-extra": "^10.1.0",
     "lru-cache": "^7.12.0",
-    "strapi-pfapi": "^2.0.2"
+    "strapi-pfapi": "^2.1.0"
   },
   "engines": {
     "node": ">=14.19.1 <=16.x.x",
